--- a/src/css/_media.scss
+++ b/src/css/_media.scss
@@ -75,7 +75,7 @@
             margin-top: 6rem;
             margin-inline: 1rem;
             .wrapp__icon-toggle {
-                width: 100%;
+                width: 97%;
                 flex-direction: row;
                 left: 0;
                 top: 0;
@@ -181,7 +181,7 @@
         .project__demo--item {
             width: 90%;
             .link-view {
-                right: 0;
+                right: 10px;
                 transform: scale(0.7);
                 & span {
                     margin-left: 4rem;
@@ -189,7 +189,7 @@
                 }
             }
             .button-view {
-                width: 20%;
+                width: 30%;
             }
         }
 
@@ -279,6 +279,8 @@
         .contact__left--content_item article {
             font-size: 16px;
             padding-left: 0;
+            margin-top: 6px;
+            line-height: 1.75;
         }
     }
     /* Thank */
@@ -341,7 +343,7 @@
         .wrapp-experience {
             &__left {
                 position: absolute;
-                width: 100%;
+                width: auto;
                 &--image {
                     left: 5rem;
                     width: 70vw;
