--- a/src/css/_skills.scss
+++ b/src/css/_skills.scss
@@ -82,8 +82,10 @@
     z-index: 2;
 }
 .knowledge__right {
+    position: absolute;
+    top: 10rem;
     animation: slideright2left 9s linear infinite;
-    width: 25%;
+    width: 20%;
     user-select: none;
 }
 .rotate {
@@ -98,9 +100,9 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 15rem;
+    margin-inline: auto;
     gap: 2rem 10rem;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
     user-select: none;
 }
