--- a/src/css/_introduce.scss
+++ b/src/css/_introduce.scss
@@ -107,6 +107,36 @@
     // grid-template-columns: 100%;
     grid-column-gap: 2rem;
 }
+
+// Nav Lists
+.nav-lists {
+    position: fixed;
+    top: 2rem;
+    right: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    z-index: 10000;
+
+    .nav-lists__link {
+        position: relative;
+        color: $textColor;
+        font-weight: 600;
+        font-size: 18px;
+        cursor: pointer;
+    }
+    .nav-lists__link::after {
+        content: '';
+        position: absolute;
+        top: 12px;
+        right: -24px;
+        width: 20px;
+        height: 1250px;
+        z-index: 10000;
+        border-top: 2px solid #fff;
+        border-right: 1px solid #fff;
+    }
+}
 @media screen and (min-width: 1024px) {
     .bd-grid {
         margin-left: auto;
@@ -140,5 +170,12 @@
             color: $greenColor;
             border: 2px solid $greenColor;
         }
+    }
+    .nav-lists__link {
+        color: $lightSection;
+    }
+    .nav-lists__link::after {
+        border-top: 2px solid $lightSection;
+        border-right: 2px solid $lightSection;
     }
 }
